--- a/src/main/resources/static/css/common.css
+++ b/src/main/resources/static/css/common.css
@@ -8,6 +8,8 @@
     list-style:none;
     font-family: 'Arial', sans-serif;
     color:black;
+    margin: 0;
+    padding: 0;
 }
 
 input:focus {
@@ -115,11 +117,10 @@ header>.header-right>.alarm>img,header>.header-right>.announce>img{
 /*---------------------------------*/
 /* 내용 부분*/
 #root{
-    height:70vh;
-    width:95%;
+    width:80%;
     margin:0 auto;
     /*border:1px solid black;*/
-    padding:10px;
+    /*padding:10px;*/
     box-sizing:border-box;
 }
 
