--- a/src/main/react/src/change_pw/changepw.css
+++ b/src/main/react/src/change_pw/changepw.css
@@ -1,4 +1,3 @@
-
 .sec{
     display: flex;
     flex-direction: column;
@@ -20,12 +19,12 @@ h1{
 }
 table{
     margin: 0 auto;
-    border-spacing: 35px;
+    border-spacing: 40px;
 }
 td{
     font-size: 20px;
 }
-td input, select{
+td input{
     width: 320px;
     height: 30px;
     font-size: 15px;
@@ -33,28 +32,8 @@ td input, select{
     border-radius: 5px;
     border: 1px solid #ccc;
 }
-.email-box input{
-    width: 130px;
 
-}
 
-.email-box select{
-    width: 70px;
-    height: 25px;
-    margin-left: 3px;
-    padding:0;
-    font-size: 11px;
-}
-
-.phonenum select{
-    width: 70px;
-    height: 34px;
-}
-.phonenum input{
-    text-align: center;
-    padding: 0 5px;
-    width: 200px;
-}
 button{
     width: 250px;
     height: 60px;
