--- a/src/main/react/src/search_pw/searchpw.css
+++ b/src/main/react/src/search_pw/searchpw.css
@@ -19,6 +19,7 @@ h1{
     padding: 40px 70px;
     text-align: center;
     border-radius: 10px;
+    margin: 30px 0;
 }
 table{
     margin: 0 auto;
