--- a/src/main/react/src/home/App.css
+++ b/src/main/react/src/home/App.css
@@ -4,7 +4,7 @@
 
 }
 .dashboard-container {
-    width: 80%;
+    width: 73%;
     margin: 0 auto;
     position: relative;
     padding-bottom: 60px;
@@ -15,12 +15,12 @@
     justify-content: space-between;
     /*align-items: flex-start;*/
     margin-top: 32px;
-    gap: 24px;
+    gap: 50px;
 }
 
 .slide-image {
     width: 750px;
-    height: 383px;
+    height: 330px;
 }
 
 .action-buttons {
@@ -33,13 +33,12 @@
 
 .main-actions {
     display: flex;
-    justify-content: center;
-    gap: 54px;
+    gap: 27px;
     width: 100%;
     background: #fff;
     border-radius: 22px;
     box-shadow: 0 1px 8px rgba(0,0,0,0.06);
-    padding: 38px 0 26px 0;
+    padding: 25px 0 20px 0;
 }
 
 .action {
@@ -50,8 +49,8 @@
 }
 
 .action-icon {
-    width: 64px;
-    height: 64px;
+    width: 50px;
+    height: 50px;
     margin-bottom: 10px;
 }
 
@@ -69,47 +68,43 @@
     display: flex;
     flex-direction: column;
     align-items: center;
-    padding: 32px 0 20px 0;
-    margin-top: 0;
+    padding: 20px 0 14px 0;
 }
 
 .btn.login {
-    width: 90%;
-    max-width: 340px;
     background: #EA6946;
     color: #fff;
     border: none;
-    border-radius: 12px;
-    font-size: 28px;
+    border-radius: 17px;
+    font-size: 18px;
     font-weight: 700;
-    padding: 20px 0;
-    margin-bottom: 8px;
+    padding: 20px 120px;
     cursor: pointer;
     box-shadow: 0 2px 8px rgba(243,109,59,0.08);
-    letter-spacing: 2px;
+    margin-bottom: 10px;
 }
 
 .signup-row {
     width: 90%;
-    max-width: 340px;
     text-align: right;
-    margin-bottom: 12px;
-    font-size: 16px;
+    margin-bottom: 10px;
     color: #666;
+    margin-right: 5px;
 
 }
 
 .signup-link {
     cursor: pointer;
     text-decoration: none;
+    font-size: 12px;
 }
 
 .login-desc {
     width: 100%;
     text-align: center;
-    font-size: 16px;
+    font-size: 15px;
     color: #888;
-    margin-top: 10px;
+    margin-bottom: 10px;
     line-height: 1.6;
 }
 
@@ -123,13 +118,14 @@
 }
 
 .main-section {
-    display: flex;
-    gap: 0;
-    background: #fff;
-    box-shadow: 0 1px 4px #d5d5d5;
     position: relative;
-    padding: 20px 0 40px 0;
-    min-height: 320px;
+    display: flex;
+    align-items: flex-start;
+    justify-content: space-between;
+    width: 90%;
+    padding: 40px 60px;
+    border: 1px solid #e3e5e8;
+    background-color: #fff;
 }
 
 
@@ -172,7 +168,7 @@
 }
 
 .auction-date {
-    font-size: 32px;
+    font-size: 30px;
     font-weight: 800;
     letter-spacing: 1px;
     line-height: 1.1;
@@ -219,8 +215,8 @@
 
 .floating-btn {
     position: fixed;
-    right: 32px;
-    bottom: 32px;
+    right: 200px;
+    bottom: 20px;
     width: 56px;
     height: 56px;
     border-radius: 50%;
@@ -230,5 +226,6 @@
     border: none;
     box-shadow: 0 2px 8px rgba(0,0,0,0.15);
     cursor: pointer;
-    z-index: 100;
+    z-index: 1000;
 }
+
