--- a/src/main/react/src/home/App.css
+++ b/src/main/react/src/home/App.css
@@ -1,13 +1,12 @@
-*{
-    font-family: 'Arial', sans-serif;
-    list-style: none;
-
-}
 .dashboard-container {
-    width: 73%;
+    max-width: 1100px;
+    width: 100%;
     margin: 0 auto;
+    background: #fff;
+    min-height: 100vh;
+    padding: 0 32px;
     position: relative;
-    padding-bottom: 60px;
+    /*padding-bottom: 60px;*/
 }
 
 .top-section {
