--- a/src/main/react/src/login/Login.css
+++ b/src/main/react/src/login/Login.css
@@ -6,8 +6,8 @@ section{
     margin-bottom: 142px;
     margin-top: 80px;
 }
-button{
-    width: 370px;
+.login-btn{
+    width: 340px;
     height: 40px;
     background-color: #EA6946;
     color: white;
@@ -31,12 +31,27 @@ button{
 
 }
 .ip-box input{
-    width: 350px;
+    width: 320px;
     height: 35px;
-    font-size: 12px;
+    font-size: 15px;
     padding-left: 20px;
-    margin: 5px;
+    margin: 10px;
     border-radius: 10px;
-    border: 1px solid black ;
-
+    border: 1px solid #ccc ;
 }
+
+/*.nav-btn{*/
+/*    margin-top: 20px;*/
+/*    border: none;*/
+/*    background: url("/img/btnG.png");*/
+/*    width: 150px;*/
+/*    height: 40px;*/
+/*    background-position: center;*/
+/*    background-size: cover;*/
+/*    cursor: pointer;*/
+/*}*/
+
+#naverIdLogin{
+    margin-top: 20px;
+}
+
