--- a/src/main/react/src/schedule/schedule.css
+++ b/src/main/react/src/schedule/schedule.css
@@ -1,5 +1,5 @@
 section{
-    width: 80%;
+    width: 1216px;
     margin: 0 auto;
 }
 .main-section {
@@ -9,13 +9,16 @@ section{
     box-shadow: 0 1px 4px #d5d5d5;
     position: relative;
     padding: 20px 0 40px 0;
-    min-height: 320px;
+    min-width: 400px;
 }
-
+.calendar {
+    width: 500px;
+}
 .calendar-section {
     width: 40%;
     border-right: 1px solid #d5d5d5;
-    padding: 0 0 0 24px;
+    padding: 0 24px 0 24px;
+    min-width: 400px;;
 }
 
 .calendar-tab {
