--- a/src/main/react/src/bidHistory/bidHistory.css
+++ b/src/main/react/src/bidHistory/bidHistory.css
@@ -79,3 +79,12 @@
     font-size: 13px;
     color: #333;
 }
+
+.myPage-btn {
+    border: none;
+    width: 30px;
+    height: 30px;
+    margin-left: 10px;
+}
+
+
