--- a/src/main/react/src/my_page/myPage.css
+++ b/src/main/react/src/my_page/myPage.css
@@ -65,7 +65,6 @@
 }
 
 .all-btn {
-    padding: 6px 12px;
     border: none;
     background-color: #fff;
     color: #ea6946;
@@ -89,6 +88,7 @@
     flex-direction: column;
     align-items: center;
     border: 1px solid #d5d5d5;
+    cursor: pointer;
 }
 
 .item-img {
