홈에서 링크

--- a/src/main/resources/templates/view.html
+++ b/src/main/resources/templates/view.html
@@ -19,7 +19,7 @@
         <ul class="menuList">
             <li><a href="introduce.do">소개</a></li>
             <li><a href="bid.do">경매</a></li>
-            <li><a href="customerService.do">고객센터</a></li>
+            <li><a href="notice.do">고객센터</a></li>
         </ul>
     </div>
     <div class="header-right">
@@ -30,7 +30,7 @@
             </a>
         </div>
         <a href="#" class="alarm"><img src="/img/alarmIcon.png" alt="알람"></a>
-        <a href="#" class="announce"><img src="/img/announceIcon.png" alt="공지사항"></a>
+        <a href="notice.do" class="announce"><img src="/img/announceIcon.png" alt="공지사항"></a>
     </div>
 </header>
 
