--- a/src/main/react/src/regauction/regauction.css
+++ b/src/main/react/src/regauction/regauction.css
@@ -1,44 +1,62 @@
-section{
-    margin-bottom: 70px;
-    margin-top: 30px;
+.body{
+    background-color: black;
 }
+
+
+.modal-backdrop {
+    position: fixed;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    background-color: rgba(0, 0, 0, 0.5);
+    z-index: 99;
+    cursor: pointer;
+}
+
+.modal-container {
+    position: fixed;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+    z-index: 100;
+    background-color: white;
+    border-radius: 50px;
+    border: 1px solid #ccc;
+}
+
+
+section{
+    margin: 30px;
+}
+
+
 table{
     margin: 0 auto;
-    border-spacing: 35px;
+    border-spacing: 30px;
 }
 .sec h1{
     text-align: center;
-    font-size: 45px;
+    font-size: 30px;
     margin-bottom: 1rem;
 }
 td{
-    font-size: 20px;
+    font-size: 15px;
 }
 td input, select{
-    width: 320px;
+    width: 300px;
     height: 30px;
-    font-size: 15px;
+    font-size: 13px;
     padding-left: 10px;
     border-radius: 5px;
     border: 1px solid #ccc;
 }
-.email-box input{
-width: 130px;
 
-}
 
-.email-box select{
-    width: 70px;
-    height: 25px;
-    margin-left: 3px;
-    padding:0;
-    font-size: 11px;
-}
-
-button{
-    width: 500px;
-    height: 60px;
-    font-size: 20px;
+.reg-btn{
+    width: 270px;
+    height: 50px;
+    font-size: 15px;
     border-radius: 5px;
     border: none;
     background-color: #EA6946;
@@ -50,6 +68,5 @@ button{
 .join-btn{
     display: flex;
     justify-content: center;
-    margin-top: 40px;
     padding: 1px;
 }
